messaging_app/green_deployment.yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
  labels:
    app: django
    version: "2.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
      version: "2.0"
  template:
    metadata:
      labels:
        app: django
        version: "2.0"
    spec:
      containers:
      - name: django
        image: messaging_app/django-app:v2
        ports:
        - containerPort: 8000
