messaging_app/kubeservice.yaml.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-router
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: django
    version: "1.0"
