messaging_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app 
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
