messaging_app/ingress.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 0.0.0.0
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-messaging-service
            port:
              number: 8000
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: django-messaging-service
            port:
              number: 8000
      - path: /admin/?(.*) 
        pathType: Prefix
        backend:
          service:
            name: django-messaging-service
            port:
              number: 8000
